--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "mongodb": "^4.3.1",
-    "next": "10.0.6",
+    "next": "^12.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
